# rnd-mermaid

./: README.md  manage.py  mermaid_test.py  pyproject.toml  test.html
app/: main.py  models.py  schema.py
app/routers/: visualize.py
app/templates/: index.html
