[tool.poetry]
name = "rnd-mermaid"
version = "0.1.0"
description = ""
authors = ["Lirak Rushiti <lirak.rushiti@gig-ext.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.2"
ni = {git = "https://oauth2:glpat-nbtoveuQ_PRhtGy9cAz5@gitlab.com/gig-rockhoppers/rockhoppers/north/ni.git", tag = "v0.2.37", extras = ["fastapi", "aioredis"]}
click = "^8.1.3"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
